# iterated-NN-system

./: README.md  index.html  iter_funcs.py  main.py  model.py  package.json  plotly_plotting.py  plt_plotting.py
CollageNet/: collage_loss.py  collagenet.py  main.py  main2d.py  train.py  visualize.py
CollageNet/weights/: fern2d_trans=4_latent=512_A=0.001_B=0_C=1_ep=200_n=10000_LR=3e-05  fern2d_trans=4_latent=512_A=0.001_B=0_C=1_ep=500_n=10000_LR=3e-05  fern2d_trans=4_latent=512_A=1_B=0_C=1_ep=1000_n=10000_LR=3e-05  fern2d_trans=4_latent=512_A=1_B=0_C=1_ep=150_n=10000_LR=3e-05  fern2d_trans=4_latent=512_A=1_B=0_C=1_ep=50_n=10000_LR=3e-05  fern2d_trans=4_latent=512_A=1e-08_B=0_C=1_ep=200_n=10000_LR=3e-05  fern2d_trans=4_latent=512_A=1e-08_B=0_C=1_ep=250_n=10000_LR=3e-05  fern2d_trans=4_latent=512_A=1e-08_B=0_C=1_ep=300_n=10000_LR=3e-05  fern2d_trans=4_latent=512_A=1e-09_B=0_C=1_ep=1000_n=10000_LR=3e-05  fern_trans=4_latent=512_A=0_B=0_C=1_ep=1000_n=1000_LR=3e-05  (+12 more)
IFSPy/: affine.py  chains.py  chandra_optimize.ipynb  demo.py  fractal_explorer_gui_2d.py  ifs.py  ifs_typing.py  markov.py  objective.py  optimize.py  optimize_ifs.py  optimize_markov.py  setup.py  visualize.py
continuous_IFS/: README.md  affine_model.py  iter_funcs.py  main.py  plotly_plotting.py  point_cloud_model
ifs-web-app/: package-lock.json  package.json  svelte.config.js  vite.config.ts
iterator/: Cargo.toml
iterator/src/: lib.rs
text2ifs/: README.md  annotations.csv  dataset.py  ifsnet_multi.onnx  model.py  test_annotations.csv  test_encoder.py  to_onnx.py  train.py
word2ifs/: README.md
(+79 files in other folders)
