[package]
name = "iterator"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.32.5"
approx = "=0.5.1"
rand = "0.8.4"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
hsv = "0.1.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[lib]
crate-type = ["cdylib", "rlib"]